# surreal-chat

./: .env.example  Cargo.toml  LICENSE  README.md  docker-compose.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  schema.surql  taskfile.yaml
backend/api-warp/: Cargo.toml  Dockerfile  chat.html
backend/api-warp/src/: main.rs
backend/api-warp/src/handler/: chat.rs  events.rs  mod.rs  ws.rs
backend/api-warp/src/routes/: chat.rs  mod.rs
backend/lib/: Cargo.toml
backend/lib/src/: actions.rs  client.rs  events.rs  lib.rs  transactions.rs
backend/lib/src/chats/: db.rs  messages.rs  mod.rs
backend/lib/src/serde/: mod.rs  string_thing.rs
backend/lib/src/surreal/: mod.rs
backend/lib/src/surreal/chat/: mod.rs  models.rs  notifications.rs
backend/lib/src/surreal/user/: mod.rs  models.rs
backend/lib/src/users/: db.rs  messages.rs  mod.rs
backend/surreal-events/: Cargo.toml  Dockerfile
backend/surreal-events/src/: cli.rs  events.rs  main.rs  process.rs  processor.rs
backend/surreal-events/src/chat/: mod.rs
backend/warp-chat/: Cargo.toml  Dockerfile  chat.html
backend/warp-chat/src/: cli.rs  events.rs  main.rs
backend/warp-chat/src/handler/: ws.rs
backend/warp-chat/src/routes/: events.rs  mod.rs  ws.rs
frontend/nextjs/: Dockerfile  package.json  pnpm-lock.yaml
frontend/nextjs/app/: page.tsx
frontend/nextjs/components/: chat.tsx
misc/: Dockerfile
