[workspace]
members = [
  "backend/lib",
  "backend/surreal-events",
  "backend/api-warp",
]
resolver = "2"

[workspace.package]
authors = ["Sebastian Kriems"]
description = "event-driven"
edition = "2021"
rust-version = "1.78.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.86"
clap = { version = "4.0.8", features = ["env", "derive"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rdkafka = { version = "0.36.2", features = ["ssl", "cmake-build"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = { version = "1.5.0" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
