[package]
name = "lib"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { version = "1.5.0" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
