[package]
name = "surreal-events"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
lib = { path = "../lib" }
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
