[package]
name = "warp-chat"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lib = { path = "../lib" }
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
warp = { version = "0.3.7", features = ["websocket"] }
